cleaned up some extra files

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,7 +5,7 @@
 		<script src="js/libs/mendeley.js"></script>
 		<script src="js/libs/async.js"></script>
 		
-		<script src="js/mendeley-gather.js"></script>
+		<script src="js/mendeleyDataGather.js"></script>
 		<script src="js/visualization.js"></script>
 		<script src="js/viz-init.js"></script>
 		
