--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,12 +1,15 @@
 <html>
 	<head>
 		<script src="js/libs/jquery.js"></script>
+		<script src="js/libs/jquery-ui.js"></script>
 		<script src="js/libs/bootstrap.js"></script>
 		<script src="js/libs/mendeley.js"></script>
 		<script src="js/libs/async.js"></script>
+		<script src="js/libs/handlebars.js"></script>
 		
 		<script src="js/mendeleyDataGather.js"></script>
 		<script src="js/visualization.js"></script>
+		<script src="js/note.js"></script>
 		<script src="js/viz-init.js"></script>
 		
 		<link rel="stylesheet" href="css/bootstrap.css">
@@ -42,15 +45,30 @@
 				</div>
 			</div>
 			<div class="js-vizContainer" style="display:none">
-				<div class="row">
-					<div class="col-xs-2">
+				<div class="row controls">
+					<div class="col-xs-12">
 						<h6 class="js-group-name"></h6>
 					</div>
-					<div class="col-xs-10">
-						
+					<div class="row viz">
+						<div class="col-xs-12">
+							
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+		<script id="note-template" type="text/x-handlebars-template">
+			<div class="note color-{{color}}">
+				<div class="meta-info">
+					<span class="category">{{category}}</span>
+					<span class="glyphicon glyphicon-info-sign source-button" aria-hidden="true"></span>
+				</div>
+				<h4>{{annotation}}</h4>
+				<div class="biblio">{{documentObj.title}}, {{documentObj.year}}</div>
+				<div class="source">
+					{{source}}
+				</div>
+			</div>
+		</script>
 	</body>
 </html>
