removed icons. not working on different browsers

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -75,9 +75,9 @@
 		<script id="note-template" type="text/x-handlebars-template">
 			<div class="note color-{{color}}">
 				<div class="meta-info">
-					<span class="category">{{category}}</span>
-					<span class="glyphicon glyphicon-info-sign source-button"></span>
-					<span class="text-right copy-button" data-clipboard-text="{{copyString}}">copy</span>
+					<span class="category">{{category}}</span> | 
+					<span class="source-button">see source text</span> | 
+					<span class="text-right copy-button" data-clipboard-text="{{copyString}}">copy citation</span>
 				</div>
 				<h4>{{annotation}}</h4>
 				<div class="biblio">{{documentObj.title}}, {{documentObj.year}}</div>
